kube/stg/ingress-external.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fbis-ccf-external
  labels:
    cert-manager.io/solver: route53
  annotations:
    cert-manager.io/enabled: "true"
    ingress.kubernetes.io/force-ssl-redirect: "true"
    ingress.kubernetes.io/whitelist-source-range: "94.0.160.93/32,3.9.251.6/32"
    kubernetes.io/ingress.class: "nginx-external"
    ingress.kubernetes.io/add-base-url: "true"
spec:
  tls:
    - hosts:
        - fbis-contact-form.stg.sas.homeoffice.gov.uk
      secretName: fbis-ccf-external
  rules:
    - host: fbis-contact-form.stg.sas.homeoffice.gov.uk
      http:
        paths:
          - path: /
            backend:
              serviceName: fbis-ccf
              servicePort: 443
